# Intelligent-data-analysis

./: .env.example  .gitignore  Dockerfile  README.md  RULES.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py
src/: config.py  logger.py
src/agent/: agent.py  context.py  router.py  sanitizer.py  sql_sanitizer.py  tools.py
src/connectors/: __init__.py  base.py  mysql_connector.py
src/database/: db.py  models.py  session_manager.py
src/llm/: deepseek_client.py  rate_limiter.py
src/observability/: __init__.py  handler.py  langfuse_client.py  prompt_manager.py
src/schema/: __init__.py  discovery.py  serializer.py
src/tools/: analyzer.py  data_cleaner.py  data_loader.py  visualizer.py
src/tracing/: __init__.py  trace.py
src/ui/: streamlit_app.py
