[project]
name = "data-analysis-agent"
version = "0.1.0"
description = "基于 DeepSeek + LangChain 的智能数据分析助手"
requires-python = ">=3.11"
dependencies = [
    "langchain",
    "langchain-community",
    "langchain-openai",
    "langfuse>=2,<3",
    "matplotlib",
    "numpy",
    "openpyxl",
    "pandas",
    "plotly",
    "psycopg2-binary>=2.9.12",
    "pymysql>=1.1.0",
    "python-dotenv",
    "seaborn",
    "sqlalchemy>=2.0.50",
    "sqlglot>=25.0.0",
    "streamlit",
]

[project.scripts]
data-agent = "run:run_streamlit"
data-agent-cli = "run:run_cli"

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"
